compiler/testData/cli/jvm/_XjvmDefault/jvmDefaultAllCompatibility.out
compiler/testData/cli/jvm/_XjvmDefault/jvmDefault.kt:1:1: error: usage of '@JvmDefaultWithCompatibility' is only allowed with '-Xjvm-default=all' option.
@JvmDefaultWithCompatibility
^^^^^^^^^^^^^^^^^^^^^^^^^^^^
COMPILATION_ERROR
